// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blacklisted syntax: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "stringify(parse(\\"function* f() { yield 1; } f();\\"), undefined, 2);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [ParseError: Yield expressions are not allowed],
      "location": SourceLocation {
        "end": Position {
          "column": 50,
          "line": 1,
        },
        "start": Position {
          "column": 10,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Blatant syntax error: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "stringify(parse(\\"'\\"), undefined, 2);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [ParseError: SyntaxError: Unterminated string constant (1:0)],
      "location": SourceLocation {
        "end": Position {
          "column": 20,
          "line": 1,
        },
        "start": Position {
          "column": 10,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Syntax rules: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "stringify(parse(\\"x = y = x;\\"), undefined, 2);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [ParseError: Assignment inside an expression is not allowed. Only assignment in a statement is allowed.],
      "location": SourceLocation {
        "end": Position {
          "column": 29,
          "line": 1,
        },
        "start": Position {
          "column": 10,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;
